@@ -12,6 +12,7 @@ Snapshot ????-??-?? ToDo
 Now
  * Remove Ruby support.
  * Dump full population at the end.
+ * Make ST_ANSWER_QUALITY, ST_MOVE_DIFF, ST_DIR_DIFF as aggregative.
 
 Version 0.0.0.9 2010-12-30
  * Remove check for equality in mutation and crossover because it can break good ADF.
